#51 - Fixed issue with Tab text being cut off in newer versions of Chrome

--- a/assets/stylesheets/common.css
+++ b/assets/stylesheets/common.css
@@ -78,3 +78,7 @@ code {
   padding: 1rem;
   display: block;
 }
+
+.tabbed-pane-header-tab-title {
+  display: inline;
+}
